# ROS-STERO-Velma

./: CMakeLists.txt  README.md  map.bt  map.ot  package.xml
data/gazebo/worlds/: cabinet.world  tables.world  tablesv2.world
launch/: proj1.launch  proj1_utils.launch  proj1v2_utils.launch  proj2_utils.launch  velma_system_stero.launch
scripts/: lab1_1.py  lab1_2.py  proj1.py  proj1_FINAL.py  proj1v2.py  proj2.py
srv/: lab1_1.srv
